--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
+		"@hono/zod-validator": "^0.4.2",
 		"hono": "^4.7.1",
-		"node-html-parser": "^7.0.1"
+		"node-html-parser": "^7.0.1",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250204.0",
