--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@hono/zod-validator": "^0.4.2",
+		"@notionhq/client": "^2.2.15",
 		"hono": "^4.7.1",
 		"node-html-parser": "^7.0.1",
 		"zod": "^3.24.2"
