--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,12 +18,12 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@upstash/qstash": "2.7.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "next": "15.2.0-canary.69",
+    "lucide-react": "^0.476.0",
+    "next": "15.2.0",
     "next-themes": "^0.4.4",
+    "rabbitmq-client": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
