--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,7 @@
     "@repo/typescript-config": "*"
   },
   "exports": {
-    "./constants": "./src/constants/index.ts",
-    "./utils": "./src/utils/index.ts"
+    "./models": "./src/models/index.ts",
+    "./types": "./src/types/index.ts"
   }
 }
