--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,8 +1,9 @@
 {
   "name": "server",
-  "type": "module",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/index.ts"
+    "start": "node --env-file=.env dist/bundle.js",
+    "dev": "tsx watch --env-file=.env src/index.ts",
+    "build": "webpack -c ./webpack.config.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
@@ -16,7 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
+    "ts-loader": "^9.5.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
