--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/shared": "*",
+    "@diiiazote/redis-rate-limit": "^1.0.7",
     "@hookform/resolvers": "^4.1.1",
     "@icons-pack/react-simple-icons": "^12.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -19,8 +19,10 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@repo/shared": "*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.6.0",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.7",
     "next": "15.2.1",
