--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,8 +7,8 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
-    "@repo/typescript-config": "*"
+    "@repo/typescript-config": "^0.0.0",
+    "typescript": "^5.8.3"
   },
   "exports": {
     "./models": "./src/models/index.ts",
