--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "dev": "turbo run dev"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3"
   },
   "engines": {
-    "node": ">=22"
+    "bun": ">=1.3.0"
   },
-  "packageManager": "npm@11.5.1",
+  "packageManager": "bun@1.3.0",
   "workspaces": [
     "apps/*",
     "packages/*"
