--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,14 +3,13 @@
   "scripts": {
     "start": "bun run dist/index.js",
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --outdir dist"
+    "build": "bun build src/index.ts --outdir dist --target bun"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.3",
     "@notionhq/client": "^5.1.0",
     "@repo/shared": "*",
     "hono": "^4.9.9",
-    "ioredis": "^5.8.0",
     "node-html-parser": "^7.0.1",
     "redis": "^5.8.3",
     "zod": "^4.1.12"
@@ -20,7 +19,6 @@
     "ts-loader": "^9.5.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "webpack": "^5.102.0",
-    "webpack-cli": "^6.0.1"
+    "@types/bun": "^1.3.0"
   }
 }
