--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "bun run --bun next dev --turbopack",
-    "build": "bun run --bun next build",
+    "build": "bun run --bun next build --turbopack",
     "start": "bun run --bun next start",
     "lint": "next lint"
   },
